...
                Icons.clear_all,
                size: 16.0,
                color: colorScheme.onErrorContainer,
              ),
              const SizedBox(width: 4.0),
              Text(
                'Clear All',
                style: TextStyle(
                  color: colorScheme.onErrorContainer,
                  fontWeight: FontWeight.w500,
                  fontSize: 13.0,
                ),
              ),
...
